Patched index.html

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teachers Portal</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div>
-        <h1>Welcome to Teachers Portal</h1>
-        <p>The repository is created to manage the students for teachers.</p>
-        <a href="/docs">Go to API Docs</a>
+      <h1>Welcome to Teachers Portal</h1>
+      <p>The repository is created to manage the students for teachers.</p>
+      <p>
+        Checkout the api specification and details
+        <a
+          href="https://github.com/AkshayHere/teachers-portal/blob/main/README.md"
+          >here</a
+        >
+      </p>
     </div>
-</body>
-
+  </body>
 </html>
