Added docs with Swagger

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <div>
       <h1>Welcome to Teachers Portal</h1>
@@ -17,7 +16,7 @@
       <p>
         Checkout the api specification and details
         <a
-          href="https://github.com/AkshayHere/teachers-portal/blob/main/README.md"
+          href="/docs"
           >here</a
         >
       </p>
